--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
         </li>
     </ul>
 </div>
+<form action="#" class="modal-form-footer">
+
+</form>
 </div>
  </footer> 
 <!-- === End Footer=== -->
@@ -331,9 +334,39 @@
         <svg class="modal-btn-close" width=18px height=18px>
             <use href="./images/symbol-defs.svg#icon-close-black-18dp-2-1-1"></use></svg>
             </button>
+            <form action="#" class="modal-form">
+                <p class="modal-form-head">Оставьте свои данные, мы вам перезвоним</p>
+                <label class="modal-form-field">Имя
+                    <span class="modal-form-input-wrapper"> 
+                        <input type="text" name="user-name" class="modal-form-input" minlength="2" required > 
+                        <svg class="modal-form-icon" width=18px height=18px> 
+                    <use href="./images/symbol-defs.svg#icon-person"></use>
+                </svg>
+            </span>
+                </label>
+                <label class="modal-form-field"> Телефон 
+                    <span class="modal-form-input-wrapper"> <input type="tel" name="user-phone" class="modal-form-input" pattern="[0-9]{3}[-][0-9]{3}[-][0-9]{2}[-][0-9]{2}" title="096-111-11-11" required > <svg class="modal-form-icon" width=18px height=18px> 
+                        <use href="./images/symbol-defs.svg#icon-phone"></use>
+                    </svg></span>
+                </label>
+                <label class="modal-form-field"> Почта 
+                    <span class="modal-form-input-wrapper"> <input type="email" name="user-email" class="modal-form-input" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required> <svg class="modal-form-icon" width=18px height=18px> 
+                        <use href="./images/symbol-defs.svg#icon-email"></use>
+                    </svg></span>
+                </label>
+                <label class="modal-form-field"> Комментарий 
+                    <textarea name="user-message" class="modal-form-message" placeholder="Введите текст"></textarea>
+                </label>
+                <input type="checkbox" name="user-policy" class="modal-form-checkbox" id="checkbox-policy" required >
+                <label for="checkbox-policy" class="modal-form-checkbox-policy">Соглашаюсь с рассылкой и принимаю <a href=""
+                        class="modal-form-policy-link">Условия договора</a></label> 
+                        <button type="submit" class="modal-form-btn">Отправить</button>           
+            </form>
     </div>
+   
 </div>
 <!-- === end modal=== -->
 <script src="./js/modal.js"></script>
 </body>
 </html>
+
