--- a/portfolio.html
+++ b/portfolio.html
@@ -178,6 +178,20 @@
                 </li>
             </ul>
         </div>
+        <form action="#" class="modal-form-footer">
+            <p class="form-footer-head">Подпишитесь на рассылку</p>
+            <ul class="form-list list">
+                <li class="form-list-item"> <label for="" class="form-footer-field">
+                        <input type="email" name="user-email" class="form-footer-input" placeholder="E-mail"
+                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                    </label></li>
+                <li class="form-list-item"><button type="submit" class="form-footer-btn">Подписаться
+                        <svg class="form-footer-btn-icon" width=24px height=24px>
+                            <use href="./images/symbol-defs.svg#icon-send"></use>
+                        </svg>
+                    </button></li>
+            </ul>
+        </form>
     </div>
 </footer>
 </body>
